tests/semantic/fail/linkage_of_functions.c
int main(void) {
  int f(int);
  return 0;
}

int f(void) {return 0;}
